syntax = "proto3";
package g2u;

import "rpc/currency.proto";
import "rpc/define.proto";

service TokenRPC {
    	rpc AdminCmd(AdminRequest) returns (AdminResponse) {};

        //委托入队
		rpc EntrustOrder(EntrustOrderRequest) returns (CommonErrResponse) {};
        //新增代币
        rpc AddTokenNum(AddTokenNumRequest) returns (CommonErrResponse) {};

        rpc HistoryKline(HistoryKlineRequest) returns (HistoryKlineResponse) {};

        //交易队列
        rpc Symbols(SymbolsRequest) returns (SymbolsResponse) {};

        //委托队列
        rpc EntrustQuene(EntrustQueneRequest) returns (EntrustQueneResponse) {};

        //历史委托队列
        rpc EntrustHistory(EntrustHistoryRequest) returns (EntrustHistoryResponse) {};

        //当前委托队列
        rpc EntrustList(EntrustHistoryRequest) returns (EntrustHistoryResponse) {};
}

enum ENTRUST_OPT //操作方向类型
{
    EONONE          = 0;
    BUY             = 1; //买入类型
    SELL            = 2; //卖出类型
    EOMAX          = 3;
}

enum ENTRUST_TYPE //委托类型
{
    ETNONE                    = 0;
    MARKET_PRICE            = 1;  //市价委托
    LIMIT_PRICE             = 2; //限价委托
    ETMAX                   =3;
}

enum TOKEN_OPT_TYPE //金钱操作类型
{
    TOTNONE                    = 0;
    ADD                     = 1;  //加钱
    DEL                     = 2; //减钱
    TOTMAX                  =3;
}

message  EntrustOrderRequest {
    string symbol                    =2;//交易币种
    int64 on_price                    =3;//委托价格
    int64 num                      =4;//委托数量
    ENTRUST_OPT  opt                      =5;
    ENTRUST_TYPE  type                  =6;
    uint64 uid                      =7;
}

message EntrustOrderResponse{
    int32 err                       =1;
    string message                  =2;
}

message AddTokenNumRequest {
    int32 err = 1;
    string message = 2;
    uint64 uid = 3;
    int32 token_id = 4;
    int64 num = 6;
    TOKEN_OPT_TYPE opt = 7;
    bytes ukey  =8;
    int32 type  =9;
}

message HistoryKlineRequest{
    string symbol   =1;
    string period   =2;
    string size     =3;
}

message HistoryKlineResponse{
    int32 err                       =1;
    string message                  =2;
}

message SymbolsRequest{
    int32 type                      =1;
}

message SymbolBaseData{
    string symbol                       =1;
    string  price                    =2;
    string  cny_price                    =3;
    string  scope                        =4;
}

message SymbolsResponse{
    int32 err                       =1;
    string message                  =2;
    repeated SymbolBaseData data     =3;
}


message EntrustBaseData{
    string price                        =1;
    string surplus_num                  =2;
    string on_price                     =3;
}

message EntrustQueneRequest {
    string symbol       =3;
}

message EntrustQueneResponse {
    int32 err                       =1;
    string message                  =2;
    repeated EntrustBaseData buy    =3;
    repeated EntrustBaseData sell   =4;
}

message EntrustHistoryRequest{
    uint64 uid                          =1;
    int32 limit                         =2;
    int32 page                          =3;
}

message EntrustHistoryBaseData{
    string entrust_id                    =1;
    string  symbol                        =2;
    ENTRUST_OPT opt                      =3;
    ENTRUST_TYPE   type                  =4;
    int64 all_num                       =5;
    int64 on_price                      =6;
    int64 surplus_num                   =7;
    int32 states                        =8;
    int64 create_time                   =9;
}

message EntrustHistoryResponse{
    int32 err                       =1;
    string message                  =2;
    repeated EntrustHistoryBaseData data=3;
}